play-recommendation/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-recommendation-dev
spec:
  replicas: 0
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: play-recommendation-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        # app: play-recommendation-dev
        # version: v1.0
        app.kubernetes.io/name: play-recommendation-dev
    spec:
      containers:
        - name: app
          image: 111111111111.dkr.ecr.ap-northeast-2.amazonaws.com/play-recommendation-dev
          resources: {}
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 5
